[gd_scene load_steps=20 format=3 uid="uid://b3qcv045rpri2"]

[ext_resource type="Texture2D" uid="uid://bair0goj8x4gm" path="res://Player/Teste_char_sprite.png" id="1_ewfcd"]
[ext_resource type="Script" path="res://Player/jogador_2try.gd" id="1_p0mb0"]

[sub_resource type="Animation" id="Animation_tio1n"]
resource_name = "Atk Up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_mf4fg"]
resource_name = "Atk Side"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 3), Vector2i(3, 3), Vector2i(2, 3), Vector2i(1, 3), Vector2i(0, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_bp0n1"]
resource_name = "Atk Up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_7t1jr"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h4coy"]
resource_name = "Idle Down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_nnmyj"]
resource_name = "Idle Side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_a3nma"]
resource_name = "Idle Up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_o20ok"]
resource_name = "Move Down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0, 3, 4, 3]
}

[sub_resource type="Animation" id="Animation_wbedn"]
resource_name = "Move Side"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(1, 2), Vector2i(0, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_brmha"]
resource_name = "Move Up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(1, 1), Vector2i(0, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_ngkcd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rcxi1"]
_data = {
"Atk Down": SubResource("Animation_tio1n"),
"Atk Side": SubResource("Animation_mf4fg"),
"Atk Up": SubResource("Animation_bp0n1"),
"Idle": SubResource("Animation_7t1jr"),
"Idle Down": SubResource("Animation_h4coy"),
"Idle Side": SubResource("Animation_nnmyj"),
"Idle Up": SubResource("Animation_a3nma"),
"Move Down": SubResource("Animation_o20ok"),
"Move Side": SubResource("Animation_wbedn"),
"Move Up": SubResource("Animation_brmha"),
"RESET": SubResource("Animation_ngkcd")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_61hjl"]
radius = 11.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g0xkn"]
radius = 11.0
height = 88.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sh8bl"]
radius = 55.0091

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8xfs"]
bg_color = Color(0.0705882, 0.0509804, 0.0470588, 0.470588)
border_width_left = 5
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_right = 20
corner_radius_bottom_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knbt6"]
bg_color = Color(0.728952, 0.730981, 0.713163, 0.470588)
corner_radius_top_right = 20
corner_radius_bottom_right = 20

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Jogador"]]
y_sort_enabled = true
collision_layer = 2
collision_mask = 19
script = ExtResource("1_p0mb0")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-1, -43)
texture = ExtResource("1_ewfcd")
hframes = 5
vframes = 8
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rcxi1")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -14)
shape = SubResource("CapsuleShape2D_61hjl")

[node name="HitBoxArea" type="Area2D" parent="." groups=["JogadorHitBox"]]
position = Vector2(36, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea"]
position = Vector2(-38, -44)
shape = SubResource("CapsuleShape2D_g0xkn")
debug_color = Color(0.807843, 0.0784314, 0.298039, 0)

[node name="SwordArea" type="Area2D" parent="."]
position = Vector2(53, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(-53, -80)
shape = SubResource("CircleShape2D_sh8bl")
debug_color = Color(0, 0.647059, 0.223529, 0)

[node name="ShootPosition" type="Node2D" parent="."]
position = Vector2(-2, -44)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -38.0
offset_top = -102.0
offset_right = 37.0
offset_bottom = -94.0
theme_override_styles/background = SubResource("StyleBoxFlat_l8xfs")
theme_override_styles/fill = SubResource("StyleBoxFlat_knbt6")
max_value = 20.0
value = 20.0
show_percentage = false
